<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <TextView
                android:id="@+id/name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/name_label" />

            <TextView
                android:id="@+id/species_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_label"
                android:text="@string/species" />

            <TextView
                android:id="@+id/species"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/species_label" />

            <TextView
                android:id="@+id/status_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/species_label"
                android:text="@string/status" />

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/species"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/status_label" />

            <TextView
                android:id="@+id/gender_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/status_label"
                android:text="@string/gender" />

            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/status"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/gender_label" />

            <TextView
                android:id="@+id/origin_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/gender_label"
                android:text="@string/origin" />

            <TextView
                android:id="@+id/origin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/gender"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/origin_label" />

            <TextView
                android:id="@+id/location_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/origin"
                android:text="@string/location" />

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/origin"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/location_label" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>